--- a/index.html
+++ b/index.html
@@ -8,15 +8,53 @@
     <link rel="icon" type="image/png" href="">
   </head>
   <body>
-
-  <ul id="menu">
-    <li><a href="#" class="drop">5 Columns</a>
-        <div class="dropdown_5columns">
+<!--comment-->
+<nav>
+  <ul class="menubar">
+    <li><a href="#" class="drop">About JLT</a>
+        <div class="menu">
             <div class="col_2"><p>This is a 2 Columns content</p></div>
             <div class="col_2"><p>This is a 2 Columns content</p></div>
         </div>
     </li>
-</ul>
+    <li><a href="#" class="drop">Our Insights</a>
+        <div class="menu">
+            <div class="col_2"><p>This is a 2 Columns content</p></div>
+            <div class="col_2"><p>This is a 2 Columns content</p></div>
+        </div>
+    </li>
+    <li><a href="#" class="drop">What We Do</a>
+        <div class="menu">
+            <div class="col_2"><p>This is a 2 Columns content</p></div>
+            <div class="col_2"><p>This is a 2 Columns content</p></div>
+        </div>
+    </li>
+    <li><a href="#" class="drop">Our Locations</a>
+        <div class="menu">
+            <div class="col_2"><p>This is a 2 Columns content</p></div>
+            <div class="col_2"><p>This is a 2 Columns content</p></div>
+        </div>
+    </li>
+    <li><a href="#" class="drop">Investors</a>
+        <div class="menu">
+            <div class="col_2"><p>This is a 2 Columns content</p></div>
+            <div class="col_2"><p>This is a 2 Columns content</p></div>
+        </div>
+    </li>
+    <li><a href="#" class="drop">Media Centre</a>
+        <div class="menu">
+            <div class="col_2"><p>This is a 2 Columns content</p></div>
+            <div class="col_2"><p>This is a 2 Columns content</p></div>
+        </div>
+    </li>
+    <li><a href="#" class="drop">Careers</a>
+        <div class="menu">
+            <div class="col_2"><p>This is a 2 Columns content</p></div>
+            <div class="col_2"><p>This is a 2 Columns content</p></div>
+        </div>
+    </li>
+  </ul>
+</nav>
 
     <script src="js/script.js"></script>
   </body>
